feat: SSE 스트리밍 Q&A, 채팅 UI, Swagger 추가
- QnaController: /ask/stream SSE 스트리밍 엔드포인트 구현
- RagPipelineService: buildRagContext/streamAnswer 분리로 sync/stream 공유
- ChatController + chat.jsp: 채팅 웹 UI 추가
- WebConfig: JSP 뷰 리졸버 설정
- pom.xml: JSP, JSTL, springdoc-openapi 의존성 추가
- application.yml: MVC 뷰 설정 및 Swagger 설정 추가
- start.bat: JDK 경로 수정

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>